Basic style of component

--- a/packages/single-price-grid-component/src/index.html
+++ b/packages/single-price-grid-component/src/index.html
@@ -9,6 +9,66 @@
   <link rel="stylesheet" href="./index.scss">
 </head>
 <body>
-  <div id="root">aa</div>
+  <div class="container">
+    <div class="card card-description">
+      <p class="title description-title">
+        Join our community
+      </p>
+      <p class="description-notice">
+        30-day, hassle-free money back guarantee
+      </p>
+      <p class="description-content">
+        Gain access to our full library of tutorials along with expert code reviews.
+        Perfect for any developers who are serious about honing their skills.
+      </p>
+    </div>
+    <div class="card card-price">
+      <p class="title price-title">
+        Monthly Subscription
+      </p>
+      <p class="price-content">
+        <span class="price-number">
+          &dollar;29
+        </span>
+        per month
+      </p>
+      <p class="price-description">
+        Full access for less than &dollar;1 a day
+      </p>
+      <button class="btn">
+        Sign Up
+      </button>
+    </div>
+    <div class="card card-contact">
+      <p class="title contact-title">
+        Why Us
+      </p>
+      <ul class="contact-list">
+        <li>
+          Tutorials by industry experts
+        </li>
+        <li>
+          Peer &amp; expert code review
+        </li>
+        <li>
+          Coding exercises
+        </li>
+        <li>
+          Access to our GitHub repos
+        </li>
+        <li>
+          Community forum
+        </li>
+        <li>
+          Flashcard decks
+        </li>
+        <li>
+          New videos every week
+        </li>
+        <li></li>
+      </ul>
+    </div>
+  </div>
 </body>
+<script src="index.js"></script>
 </html>
