Complete css style

--- a/packages/single-price-grid-component/src/index.html
+++ b/packages/single-price-grid-component/src/index.html
@@ -23,18 +23,22 @@
       </p>
     </div>
     <div class="card card-price">
-      <p class="title price-title">
-        Monthly Subscription
-      </p>
-      <p class="price-content">
+      <div class="card-price-wrapper">
+        <p class="title price-title">
+          Monthly Subscription
+        </p>
+        <p class="price-content">
         <span class="price-number">
           &dollar;29
         </span>
-        per month
-      </p>
-      <p class="price-description">
-        Full access for less than &dollar;1 a day
-      </p>
+          <span class="price-unit">
+          per month
+        </span>
+        </p>
+        <p class="price-description">
+          Full access for less than &dollar;1 a day
+        </p>
+      </div>
       <button class="btn">
         Sign Up
       </button>
@@ -65,7 +69,6 @@
         <li>
           New videos every week
         </li>
-        <li></li>
       </ul>
     </div>
   </div>
